--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1,38 +1,29 @@
 {% extends "base.html" %}
 
-<style>
-body {
-    ont-family: sans-serif;
-    background: white;
-}
-
-/* Header/Title */
-.card-title {
-    padding: 20px;
-    font-size: 35px;
-    font-color: black;
-    text-align: center;
-
-
-}
-
-/* Add a card effect for articles */
-.card {
-    background-color: white;
-    margin: 50px;
-    font-size: 20px;
-    padding: 20px;
-    text-align: center
-}
-
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-</style>
 
 {% block content %}
+
+     <div class="services-container section-container">
+        <div class="container">
+            <div class="row">
+                <div class="col services section-description wow fadeIn">
+                    <h2>Donate</h2>
+                    <div class="divider-1 wow fadeInUp"><span></span></div>
+                </div>
+            </div>
+            <div class="col services-explain section-description wow fadeIn">
+                <div class="description wow fadeInLeftBig">
+                    <p>
+                        Here you will see information about a carbon reducing projects around the world to which you can
+                        choose to donation of any amount of money you see convenient in order to make an impact by helping
+                        the given cause. Every month this page will be updated with a new project so we can make sure
+                        we reach all areas affected by global warming and support the maximum number of different
+                        organisations that are making that effort to pull us closer to the goal.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="section">
 <div class="flex-container">
