--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,93 @@
 
 {% block content %}
 
-  <h1 class="title">Contact</h1>
+    <style>
+
+        .title{
+            margin-bottom: 15px;
+        }
+
+        .field {
+            margin-bottom: 15px;
+        }
+
+        .form-control {
+            font-family: Arial, serif;
+            border-radius: 15px;
+            border: 2px solid #59886f;
+            padding: 15px;
+
+        }
+
+        .error{
+			color: #AB171DFF;
+		}
+
+        .btn{
+            background-color: #59886f;
+            border-color: #59886f;
+
+        }
+
+        .btn:hover{
+            background-color: #71887f;
+            border-color: #71887f;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+    </style>
+
+    <div class="column is-6 is-offset-3 contact-us">
+        <h3 class="title is-3">Contact Us</h3>
+        <br>
+        <br>
+        <div class="box contact-details">
+            <form method="POST">
+                <div class="field">
+                    {{ form.csrf_token() }}
+                    <div class="control">
+                        {{ form.name(class="input form-control", placeholder="Name") }}
+                        {% for error in form.name.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
+                <div class="field">
+                    <div class="control">
+                        {{ form.email(class="textarea form-control", placeholder="Email") }}
+                        {% for error in form.email.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
+                <div class="field">
+                    <div class="control">
+                        {{ form.subject(class="textarea form-control", placeholder="Subject") }}
+                        {% for error in form.subject.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
+                <div class="field">
+                    <div class="control">
+                        {{ form.message(class="textarea form-control", placeholder="Message") }}
+                        {% for error in form.message.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
+                <div>
+                    {{ form.submit(type="button", class="btn btn-primary d-grid gap-2 col-6 mx-auto", role="button") }}
+                </div>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
