--- a/templates/donate.html
+++ b/templates/donate.html
@@ -11,7 +11,28 @@
                     <div class="divider-1 wow fadeInUp"><span></span></div>
                 </div>
             </div>
-            <div class="col services-explain section-description wow fadeIn">
+            <div class="donate-how?">
+                <div class="description wow fadeInLeftBig">
+                    <p>
+                        How's it work?
+                    </p>
+                </div>
+            </div>
+            <div class="donate-steps">
+                <div class="description wow fadeInLeftBig">
+                    <p>
+                          <div>1) Pick a climate based project below
+                             <div>2) Enter a donation amount and click "donate"
+                                 <div>3) Fill in your card details on stripe and send your donation
+                                     <p>4) You're done, Greenify will ensure your donation is received and helps the selected
+                                         project!<p>
+
+                                     </p>
+                                 </div>
+                             </div>
+                    </div>
+
+            <div class="donate-explanation">
                 <div class="description wow fadeInLeftBig">
                     <p>
                         Here you will see information about a carbon reducing projects around the world to which you can
