--- a/templates/create_donation.html
+++ b/templates/create_donation.html
@@ -51,7 +51,7 @@
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
-                        {{ form.title(class="textarea", placeholder="Title") }}
+                        {{ form.title(class="textarea form-control", placeholder="Title") }}
                         {% for error in form.title.errors %}
                             {{ error }}
                         {% endfor %}
@@ -60,7 +60,7 @@
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
-                        {{ form.reason(class="textarea", placeholder="Reason") }}
+                        {{ form.reason(class="textarea form-control", placeholder="Reason") }}
                         {% for error in form.reason.errors %}
                             {{ error }}
                         {% endfor %}
@@ -68,7 +68,7 @@
                 </div>
                 <div class="field">
                     <div class="control">
-                        {{ form.amount(class="input", placeholder="Amount") }}
+                        {{ form.amount(class="input form-control", placeholder="Amount") }}
                         {% for error in form.amount.errors %}
                             {{ error }}
                         {% endfor %}
@@ -85,7 +85,7 @@
                 </div>
             <p>
                 <div>
-               {{ form.submit(class="button is-info is-centered", value = "post donation") }}
+               {{ form.submit(class="button is-info is-centered btn btn-lg btn-primary", value = "Post Donation") }}
                 </div>
             </form>
         </div>
