--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -67,7 +67,7 @@
                 </div>
                 <br>
                 <div>
-                    {{ form.submit(type="button", class="btn btn-primary d-grid gap-2 col-6 mx-auto", role="button") }}
+                    {{ form.submit(class="btn btn-primary d-grid gap-2 col-6 mx-auto") }}
                 </div>
             </form>
         </div>
