Change feature icons on home page to more appropriate ones and add a screenshot to fill in empty space

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
-                                <i class="fas fa-magic"></i>
+                                <i class="far fa-list-alt"></i>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -111,7 +111,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
-                                <i class="fas fa-cog"></i>
+                                <i class="fas fa-donate"></i>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -131,7 +131,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
-                                <i class="fab fa-google"></i>
+                                <i class="fas fa-calculator"></i>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -149,7 +149,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
-                                <i class="fab fa-google"></i>
+                                <i class="fas fa-map-marked-alt"></i>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -159,6 +159,13 @@
                                 can create and announce about any event in order to find more people who would like to
                                 collaborate into making a positive impact.
                             </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8 services-box wow fadeInUp">
+                    <div class="row">
+                        <div class="images">
+                            <img src="/static/graph.png" width="700">
                         </div>
                     </div>
                 </div>
