--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,13 @@
                     </p>
                 </div>
             </div>
+            <div class="col services-explain section-description wow fadeIn">
+                <div class="sm-buttons wow fadeInLeftBig">
+                    <a href="https://twitter.com/Greenify101" class="fab fa-twitter-square"></a>
+                    <a href="#" class="fab fa-instagram-square"></a>
+                    <a href="#" class="fab fa-facebook-square"></a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="services-container section-container">
