--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text">
-                        <h1 class="wow fadeInLeftBig">Welcome to Greenify!</h1>
-                        <div class="description wow fadeInLeftBig">
+                        <h1 class="Welcome">Welcome to Greenify!</h1>
+                        <div class="description">
                             <p>
                                 Here to help reduce carbon footprints globally and provide environmental expertise
                             </p>
                         </div>
-                        <div class="top-big-link wow fadeInUp">
+                        <div class="top-big-link ">
                             <a class="btn btn-primary btn-link-1" href={{ url_for("users.register") }}>Sign up</a>
                             <a class="btn btn-primary btn-link-2 scroll-link" href={{ url_for("users.login") }}>Log in</a>
                         </div>
@@ -36,8 +36,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text">
-                        <h1 class="wow fadeInLeftBig">Greenify</h1>
-                        <div class="description2 wow fadeInLeftBig">
+                        <h1 class="Welcome-2">Greenify</h1>
+                        <div class="description2">
                             <p>
                                 "The climate crisis has already been solved. We already have all the facts and solutions. All
                                 we have to do is to wake up and change." ~ Greta Thunberg
@@ -61,13 +61,13 @@
     <div class="services-container section-container">
         <div class="container">
             <div class="row">
-                <div class="col services section-description wow fadeIn">
+                <div class="col services section-description">
                     <h2>About us</h2>
-                    <div class="divider-1 wow fadeInUp"><span></span></div>
+                    <div class="divider-1"><span></span></div>
                 </div>
             </div>
-            <div class="col services-explain section-description wow fadeIn">
-                <div class="description wow fadeInLeftBig">
+            <div class="col services-explain section-description">
+                <div class="description ">
                     <p>
                         Welcome to Greenify, our goal is to raise awareness about climate change and how human activity
                         can has a devastating effect on the planet. We want to offer you the chance to make a
@@ -77,8 +77,8 @@
                     </p>
                 </div>
             </div>
-            <div class="col services-explain section-description wow fadeIn">
-                <div class="sm-buttons wow fadeInLeftBig">
+            <div class="col services-explain section-description">
+                <div class="sm-buttons">
                     <a href="https://twitter.com/Greenify101" class="fab fa-twitter-square"></a>
                     <a href="#" class="fab fa-instagram-square"></a>
                     <a href="#" class="fab fa-facebook-square"></a>
@@ -89,12 +89,12 @@
     <div class="services-container section-container">
         <div class="container">
             <div class="row">
-                <div class="col services section-description wow fadeIn">
+                <div class="col services section-description">
                     <h2>What we provide</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 services-box wow fadeInUp">
+                <div class="col-md-4 services-box">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 services-box wow fadeInDown">
+                <div class="col-md-4 services-box ">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 services-box wow fadeInUp">
+                <div class="col-md-4 services-box">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 services-box wow fadeInUp">
+                <div class="col-md-4 services-box">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="services-box-icon">
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 services-box wow fadeInUp">
+                <div class="col-md-8 services-box">
                     <div class="row">
                         <div class="images">
                             <img src="/static/graph.png" width="700">
@@ -182,13 +182,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col services section-description-climate wow fadeIn">
+            <div class="col services section-description-climate">
                 <h2>Climate change</h2>
                 <div class="divider-1 wow fadeInUp"><span></span></div>
             </div>
         </div>
-        <div class="col climate-explain section-description wow fadeIn">
-            <div class="description wow fadeInLeftBig">
+        <div class="col climate-explain section-description">
+            <div class="description">
                 <p>
                     Climate change has produced a number of threats to wildlife throughout our parks. Rising
                     temperatures lower many species survival rates due to changes that lead to less food,
@@ -196,7 +196,7 @@
                     Greenify exist to mitigate these impacts with your help.
                 </p>
                 <div class="services-container-climate2 section-container"></div>
-                <div class="col services section-description-climate wow fadeIn"></div>
+                <div class="col services section-description-climate"></div>
             </div>
         </div>
     </div>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text">
-                    <div class="description wow fadeInLeftBig">
+                    <div class="description">
                         <h2>Climate change leads to a loss of species</h2>
                         <p>Our planet is warming faster than at any time in the past 10,000 years. With these changes,
                             species have to adapt to new climate patterns (variations in rainfall; longer, warmer summers etc).</p>
