donation project changes from "in progress" to "completed" once goal is reached.

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -24,8 +24,10 @@
                           <div>1) Pick a climate based project below
                              <div>2) Enter a donation amount and click "donate"
                                  <div>3) Fill in your card details on stripe and send your donation
-                                     <p>4) You're done, Greenify will ensure your donation is received and helps the selected
-                                         project!<p>
+                                      <div>4) You're done, Greenify will ensure your donation is received and helps the selected
+                                         project!
+                                          <div>5) Once the donation goal is reached, the projected will change from "in progress"
+                                         to "completed"
 
                                      </p>
                                  </div>
