--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 services-box">
+                <div class="col-md-8 services-graph">
                     <div class="row">
                         <div class="images">
                             <img src="/static/graph.png" width="700">
