--- a/templates/index.html
+++ b/templates/index.html
@@ -171,6 +171,8 @@
                 </div>
                 <div class="col-md-8 services-graph">
                     <div class="row">
+                        <div  class="table-image">
+                            <img src="/static/table.png" width="700">
                         <div class="images">
                             <img src="/static/graph.png" width="700">
                         </div>
