--- a/static/base.css
+++ b/static/base.css
@@ -40,7 +40,7 @@ div.body-container {
     justify-items: center;
     text-align: center;
     text-justify: inter-word;
-    font-family: Geneva, sans-serif;
+    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif
 }
 
 
