swapped maps and calculator around to relate with image and added text

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,8 +128,30 @@
                                 helping the given cause. Every month this page will be updated with a new project so we can
                                 make sure we reach all areas affected by global warming and support the maximum number of
                                 different organisations that are making that effort to pull us closer to the goal.
-                                Once again the admin will be the only who will have the ability to change or review any of
+                                Once again the admin will be the only one who will have the ability to change or review any of
                                 the information.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 services-box">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="services-box-icon">
+                                <i class="fas fa-map-marked-alt"></i>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <h3>Maps</h3>
+                            <p>
+                                The Map tab will show any events related to climate action which are being hosted nearby
+                                the user’s location. The idea behind this service is to offer users a platform where they
+                                can create and announce about any event in order to find more people who would like to
+                                collaborate into making a positive impact. Once their events uploaded, it will be displayed on
+                                our Greenify map whereby our community can take action and participate towards helping it's cause.
+                                Thus users can also report local climate change hazards such as litter on beaches and wild fires,
+                                displaying their location (GPS) with an image.
+
                             </p>
                         </div>
                     </div>
@@ -148,23 +170,6 @@
                                 by the user’s actions. We believe that this is a crucial service for a more clear and visual
                                 understanding on how our actions affect the planet we live in and how important it is to be
                                 aware of the consequences of the same.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 services-box">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="services-box-icon">
-                                <i class="fas fa-map-marked-alt"></i>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <h3>Maps</h3>
-                            <p> The Map tab will show any events related to climate action which are being hosted nearby
-                                the user’s location. The idea behind this service is to offer users a platform where they
-                                can create and announce about any event in order to find more people who would like to
-                                collaborate into making a positive impact.
                             </p>
                         </div>
                     </div>
