--- a/templates/maps.html
+++ b/templates/maps.html
@@ -8,7 +8,7 @@
 
 
     {# Import events.js and css #}
-    <script src="/static/events.js"></script>
+    <script src="/static/events.js" api-key={{ gmap_key }}></script>
     <link rel="stylesheet" href="/static/events.css" />
 
     {# Set up maps #}
@@ -28,6 +28,7 @@
             </div>
             <div id="geo-toast-body" class="toast-body"></div>
         </div>
-
     </div>
+
+
 {% endblock %}
