--- a/templates/donate.html
+++ b/templates/donate.html
@@ -36,20 +36,20 @@
      <div class="services-container section-container">
         <div class="container">
             <div class="row">
-                <div class="col services section-description wow fadeIn">
+                <div class="col services section-description">
                     <h2>Donate</h2>
-                    <div class="divider-1 wow fadeInUp"><span></span></div>
+                    <div class="divider-1"><span></span></div>
                 </div>
             </div>
             <div class="donate-how?">
-                <div class="description wow fadeInLeftBig">
+                <div class="description">
                     <p>
                         How's it work?
                     </p>
                 </div>
             </div>
             <div class="donate-steps">
-                <div class="description wow fadeInLeftBig">
+                <div class="description">
                     <p>
                           <div>1) Pick a climate based project below
                              <div>2) Enter a donation amount and click "donate"
@@ -65,7 +65,7 @@
                     </div>
 
             <div class="donate-explanation">
-                <div class="description wow fadeInLeftBig">
+                <div class="description">
                     <p>
                         Here you will see information about a carbon reducing projects around the world to which you can
                         choose to donation of any amount of money you see convenient in order to make an impact by helping
