--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
             <script>
                 $('.top-content').backstretch([
-                    { url: "/static/video.mp4", duration: 6000, mute: true, alignY: 0, isVideo: true, loop: true}]);
+                    { url: "/static/woods.mp4", duration: 6000, mute: true, alignY: 0, isVideo: true, loop: true}]);
             </script>
 
         </div>
