--- a/static/base.css
+++ b/static/base.css
@@ -255,6 +255,36 @@ form div.field {
     color: #1877f2;
     background: white;
 }
+/* turbine video on donate */
+.donate-content {
+    width: 80vw;
+    height: 80vh;
+    position: relative;
+    right: calc(-0vw + 0%);
+}
+
+.donate-content .text {
+    color: #000000;
+}
+
+.donate-content .text h1 {
+    margin-top: 1px;
+    color: white;
+   text-shadow: 1px 1px 0 rgba(0,0,0,0.4);
+   padding-top:1px;
+   font-size: 70px;
+   font-weight: 700;
+   text-align: center;
+   font-family: 'Source Sans Pro', sans-serif;
+}
+/* turbine video text */
+.donate-content .description {
+    font-size:30px;
+    font-style: italic;
+    margin-top: 10px;
+
+}
+
 
 
 
