--- a/templates/contact.html
+++ b/templates/contact.html
@@ -90,5 +90,9 @@
             </form>
         </div>
     </div>
+    <p>
+
+    </p>
+    <p>@ Greenify 2021 & 2022 all rights reserved</p>
 
 {% endblock %}
