--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -289,6 +289,7 @@
                 </div>
             </div>
         </form>
+     <p>@ Greenify 2021 & 2022 all rights reserved</p>
 
 
     </div>
